opacity to solve overlapping events

--- a/web/src/less/style.less
+++ b/web/src/less/style.less
@@ -21,14 +21,14 @@
 .calendar-wrapper-month {
 
   .cell {
-    min-height: 100px;
+    height: 100px;
   }
 }
 
 .calendar-wrapper-week, .calendar-wrapper-day {
 
   .cell {
-    min-height: 300px;
+    height: 500px;
   }
 }
 
@@ -41,13 +41,13 @@
 
     .cell {
       min-width: 125px;
-      min-height: 100px;
       border: thin solid @grey-300;
       vertical-align: top;
       padding: 4px;
       position: relative;
 
       .event-block {
+        opacity: 0.6;
         background-color: @light-blue-200;
         width: 90%;
         position: absolute;
